# LP-ContaBancaria

./: CMakeLists.txt  config  config.bak  contaBancaria.cpp  contaBancaria.h  contas.txt  ex  main.cpp  operacoes.cpp  operacoes.h
include/: Operacoes.h
src/: ContaBancaria.cpp  Operacoes.cpp  main.cpp
tests/: all.cpp
